# reproai

./: .gitignore  CONTRIBUTING.md  INSTALL_FOR_AI.md  LICENSE  README.md  SMOKE_TEST.md  marketplace.json
.claude-plugin/: marketplace.json
codex-plugin/: AGENTS.md  codex-config.example.toml  install.sh
core/: .gitignore  CHANGELOG.md  README.md  VALIDATION.md  pyproject.toml
core/src/line1_core/: __init__.py  adversarial_reviewer.py  cli.py  contribute.py  coordinator.py  dependency_graph.py  fix_applier.py  gate.py  inventory.py  orphan_detector.py  output_map.py  reports.py  rule_engine.py  stata_esttab_parser.py  style_guide.md  venue_engine.py
core/src/line1_core/rules/: author_rules.yaml
core/src/line1_core/schemas/: advisory_plan.schema.json  architecture_report.schema.json  output_map_report.schema.json  risk_register.schema.json  venue_compliance_report.schema.json
core/src/line1_core/venues/: README.md  aea.yaml  ajps.yaml  apsr.yaml  econsoc.yaml  generic_dataverse.yaml  jasa.yaml  jop.yaml  worldbank.yaml
core/tests/: conftest.py  test_contribute.py  test_detector_robustness.py  test_gate.py  test_graph_substrate.py  test_issue_batch_2026_07.py  test_missing_inputs.py  test_output_map.py  test_phase3_detectors.py  test_publish_anonymity.py  test_reports_schema.py  test_rules_regression.py  test_version_lockstep.py
rules-seedbank/: README.md
site/: index.html  package-lock.json  package.json  vite.config.js
site/changelog/: index.html
tools/: README.md  build_public.py  bump_version.py  distill_rules.py  promote_rule.py  validate_plugin.py
(+55 files in other folders)
